--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-MONGO_URI = 'mongodb+srv://prabhash:prabhash@cluster0.kj3fysg.mongodb.net/?retryWrites=true&w=majority'
 PORT = 3001
-URL = 'https://task-tracker-mern-server.vercel.app/'
+URL = 'https://mi-note-mern-server.vercel.app/api-docs/'
 JWT_KEY = "jwtSecret"
